fixed spacing

--- a/c-sharks/style/about.css
+++ b/c-sharks/style/about.css
@@ -5,10 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 50px 0;
 }
 
 .about-gallery {
-    margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
